created UpdateInfo class containing update information